2003-10-06  Zoltan Varga  <vargaz@freemail.hu>

	* mini.c (mono_method_to_ir): Allow wrapper data for CEE_LDELEMA.

	* inssel-x86.brg (OP_LOCALLOC): Fix register assignment for localloc.

	* driver.c: Add support for compiling icall wrappers to --compile.

2003-10-05  Zoltan Varga  <vargaz@freemail.hu>

	* inssel.brg: The empty value in class->interface_offsets is -1, not
	0. Fixes #49287.

2003-10-03  Zoltan Varga  <vargaz@freemail.hu>

	* objects.cs: New test for 'is' operator on an array of interfaces.

Wed Oct 1 19:40:02 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* tramp-ppc.c: update trampoline code to support jumps
	and class initialization.

2003-09-30  Zoltan Varga  <vargaz@freemail.hu>

	* mini.c (mono_jit_compile_method): Fix reading of freed memory.

	* inssel.brg (OP_UNBOXCAST): Fix #46027.

	* inssel.brg (OP_UNBOX): Remove unused rule.

	* mini.h mini.c inssel-x86.brg: Allocate one SP variable for each
	region instead of one for each method. Fixes #47813.

2003-09-29  Zoltan Varga  <vargaz@freemail.hu>

	* exceptions.cs (test_0_nested_finally): New regression test for
	nested exception handlers.

	* mini.c (mono_jit_runtime_invoke): Fix for the previous fix.

	* mini.c (mono_method_to_ir): Avoid inlining tail calls.

	* mini.c (mono_method_to_ir): Fix tail recursion in the presence of 
	inlining.

	* mini.c (mono_method_check_inlining): Make the inlining limit 
	configurable by an environment variable.
	
	* mini.c (mono_jit_runtime_invoke): Add Gonzalo's fix for #36545.

	* mini.h: Bump AOT file version.

	* mini.h mini.c aot.c mini-x86.c: For relocations which refer to a 
	token, store the image along with the token, since the token might not 
	refer to the same image as the method containing the relocation, 
	because of inlining.

2003-09-27  Zoltan Varga  <vargaz@freemail.hu>

	* mini.c (mono_precompile_assemblies): New function to compile
	all methods in all loaded assemblies.

	* mini.h driver.c: Added new optimization flag MONO_OPT_PRECOMP.
