@@ -1,3 +1,8 @@
+2003-10-08  Zoltan Varga  <vargaz@freemail.hu>
+
+	* mini-x86.c (mono_arch_emit_epilog): Add support for stdcall calling
+	convention.
+
 2003-10-06  Zoltan Varga  <vargaz@freemail.hu>
 
 	* mini.c (mono_method_to_ir): Allow wrapper data for CEE_LDELEMA.
